<resources>
    <string name="app_name">Sample App</string>

    <!-- Menu actions-->
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_search">Search</string>

    <!-- Generic actions (e.g. snackbar or dialog buttons) -->
    <string name="generic_action_done">Done</string>
    <string name="generic_action_undo">Undo</string>
    <string name="generic_action_cancel">Cancel</string>
    <string name="generic_action_create">Create</string>

    <!-- App-wide concepts -->

    <!-- Bottom navigation-->
    <string name="bottom_nav_one">One</string>
    <string name="bottom_nav_two">Two</string>
    <string name="bottom_nav_three">Three</string>

    <!-- Fragment labels -->
    <string name="fragment_label_one">Fragment One</string>
    <string name="fragment_label_two">Fragment Two</string>
    <string name="fragment_label_three">Fragment Three</string>
    <string name="fragment_label_settings">Settings</string>
    <string name="fragment_label_licenses">Open Source Licenses</string>

    <!-- FragmentOne -->

    <!-- FragmentTwo -->

    <!-- FragmentThree -->

    <!-- SettingsFragment -->
    <string name="settings_open_source_licenses">Open Source Licenses</string>

    <!-- LicensesFragment -->
    <string name="licenses_view_license">View License</string>

    <string name="new_list_created_action">See list</string>

    <!-- Error messages -->
    <string name="error_message_generic">SampleApp encountered an error, please try again later</string>
    <string name="error_message_server">Server encountered a %$d error, please try again later</string>
    <string name="error_message_server_with_error">Server encountered a %1$d error, please try again later (status code: %2$d)</string>
    <string name="error_message_no_internet">Device is offline - please connect to a network and try again</string>
    <string name="error_no_internet_try_again_button">Try again</string>
    <string name="error_no_results_found">No results found</string>

</resources>
